--- a/setzer.in
+++ b/setzer.in
@@ -29,6 +29,7 @@ import setzer.workspace.workspace_viewgtk as view
 from setzer.app.service_locator import ServiceLocator
 from setzer.dialogs.dialog_locator import DialogLocator
 from setzer.app.color_manager import ColorManager
+from setzer.app.font_manager import FontManager
 from setzer.helpers.timer import timer
 
 
@@ -107,6 +108,7 @@ class MainApplicationController(Adw.Application):
 
         ServiceLocator.set_main_window(self.main_window)
         ColorManager.init(self.main_window)
+        FontManager.init(self.main_window)
 
         self.workspace = Workspace()
         ServiceLocator.set_workspace(self.workspace)
@@ -128,7 +130,7 @@ class MainApplicationController(Adw.Application):
 
         # init controller
         self.workspace.init_workspace_controller()
-        self.workspace.actions.quit_action.connect('activate', self.on_quit_action)
+        self.workspace.actions.actions['quit'].connect('activate', self.on_quit_action)
 
     def save_window_state(self):
         main_window = self.main_window
