add back sidebar

--- a/setzer.in
+++ b/setzer.in
@@ -143,6 +143,9 @@ class MainApplicationController(Adw.Application):
         self.settings.set_value('window_state', 'preview_paned_position', main_window.preview_paned.target_position)
         self.settings.set_value('window_state', 'show_build_log', self.workspace.show_build_log)
         self.settings.set_value('window_state', 'build_log_paned_position', main_window.build_log_paned.target_position)
+        self.settings.set_value('window_state', 'show_symbols', self.workspace.show_symbols)
+        self.settings.set_value('window_state', 'show_document_structure', self.workspace.show_document_structure)
+        self.settings.set_value('window_state', 'sidebar_paned_position', main_window.sidebar_paned.target_position)
         self.settings.pickle()
 
     def on_window_close(self, window=None, parameter=None):
