--- a/data/org.cvfosammmm.Setzer.metainfo.xml.in
+++ b/data/org.cvfosammmm.Setzer.metainfo.xml.in
@@ -64,6 +64,11 @@
     </requires>
 
     <releases>
+        <release version="57" date="2023-8-29">
+            <description translatable="no">
+                <p>Gtk4, ...</p>
+            </description>
+        </release>
         <release version="56" date="2023-6-11">
             <description translatable="no">
                 <p>Language chooser in document wizard, ...</p>
