--- a/setzer.in
+++ b/setzer.in
@@ -31,6 +31,7 @@ from setzer.dialogs.dialog_locator import DialogLocator
 from setzer.app.color_manager import ColorManager
 from setzer.app.font_manager import FontManager
 from setzer.app.latex_db import LaTeXDB
+from setzer.widgets.popover.popover_manager import PopoverManager
 from setzer.settings.document_settings import DocumentSettings
 from setzer.helpers.timer import timer
 
@@ -113,6 +114,7 @@ class MainApplicationController(Adw.Application):
         ColorManager.init(self.main_window)
         FontManager.init(self.main_window)
         LaTeXDB.init(resources_path)
+        PopoverManager.init(self.main_window)
 
         self.workspace = Workspace()
         ServiceLocator.set_workspace(self.workspace)
