--- a/setzer.in
+++ b/setzer.in
@@ -31,7 +31,6 @@ from setzer.dialogs.dialog_locator import DialogLocator
 from setzer.app.color_manager import ColorManager
 from setzer.app.font_manager import FontManager
 from setzer.app.latex_db import LaTeXDB
-from setzer.widgets.popover.popover_manager import PopoverManager
 from setzer.settings.document_settings import DocumentSettings
 from setzer.helpers.timer import timer
 
@@ -114,7 +113,7 @@ class MainApplicationController(Adw.Application):
         ColorManager.init(self.main_window)
         FontManager.init(self.main_window)
         LaTeXDB.init(resources_path)
-        PopoverManager.init(self.main_window)
+        self.main_window.create_widgets()
 
         self.workspace = Workspace()
         ServiceLocator.set_workspace(self.workspace)
@@ -127,9 +126,6 @@ class MainApplicationController(Adw.Application):
             self.main_window.unmaximize()
         self.main_window.set_default_size(self.settings.get_value('window_state', 'width'), 
                                           self.settings.get_value('window_state', 'height'))
-        self.main_window.current_width = self.settings.get_value('window_state', 'width')
-        self.main_window.current_height = self.settings.get_value('window_state', 'height')
-        self.first_window_state_event = True
         self.main_window.show()
 
         self.main_window.connect('close-request', self.on_window_close)
