--- a/data/org.cvfosammmm.Setzer.metainfo.xml.in
+++ b/data/org.cvfosammmm.Setzer.metainfo.xml.in
@@ -64,6 +64,11 @@
     </requires>
 
     <releases>
+        <release version="62" date="2023-11-21">
+            <description translatable="no">
+                <p>Custom popovers, ...</p>
+            </description>
+        </release>
         <release version="61" date="2023-10-23">
             <description translatable="no">
                 <p>Show app's name in system monitor, ...</p>
