--- a/setzer.in
+++ b/setzer.in
@@ -86,7 +86,6 @@ class MainApplicationController(Adw.Application):
             self.activate()
             self.is_active = True
 
-    @timer
     def activate(self):
         # setup gettext
         gettext.install('setzer', names=('ngettext',), localedir='@localedir_path@')
@@ -130,7 +129,7 @@ class MainApplicationController(Adw.Application):
             self.main_window.unmaximize()
         self.main_window.set_default_size(self.settings.get_value('window_state', 'width'), 
                                           self.settings.get_value('window_state', 'height'))
-        self.main_window.show()
+        self.main_window.present()
 
         self.main_window.connect('close-request', self.on_window_close)
 
