Update metadata in xml to comply with appstream 1.0 changes
See: https://planet.kde.org/matthias-klumpp-2023-11-11-appstream-1-0-released/
See: https://www.freedesktop.org/software/appstream/docs/chap-Metadata.html#tag-developer

--- a/data/org.cvfosammmm.Setzer.metainfo.xml.in
+++ b/data/org.cvfosammmm.Setzer.metainfo.xml.in
@@ -6,7 +6,9 @@
     <content_rating type="oars-1.1" />
     <name translatable="no">Setzer</name>
     <summary>Simple yet full-featured LaTeX editor</summary>
-    <developer_name translatable="no">Cvfosammmm</developer_name>
+    <developer id="https://github.com/cvfosammmm">
+        <name translatable="no">Cvfosammmm</name>
+    </developer>
 
     <description>
         <p>Setzer lets you Write LaTeX documents with an easy to use yet full-featured editor.</p>
