appdata: Add developer ID
Flathub requires a developer tag and developer ID. Also Appstream decided to use rdns structure for developer ID.

It allows reverse-dns IDs like sh.cozy, de.geigi or Fediverse handle (like @user@example.org)

> A developer tag with a name child tag must be present.
> Only one developer tag is allowed and the name tag also must be present only once in untranslated form.

```
<developer id="tld.vendor">
  <name>Developer name</name>
</developer>
```
Source: https://docs.flathub.org/docs/for-app-authors/metainfo-guidelines/#name-summary-and-developer-name

> The element should have a id property, containing a unique ID to identify the component developer / development team. It is recommended to use a reverse-DNS name, like org.gnome or io.github.ximion, or a Fediverse handle (like @user@example.org) as ID to achieve a higher chance of uniqueness.

Source: https://www.freedesktop.org/software/appstream/docs/chap-Metadata.html#tag-developer

--- a/data/org.cvfosammmm.Setzer.metainfo.xml.in
+++ b/data/org.cvfosammmm.Setzer.metainfo.xml.in
@@ -7,6 +7,9 @@
     <name translate="no">Setzer</name>
     <summary>Simple yet full-featured LaTeX editor</summary>
     <developer_name translate="no">Cvfosammmm</developer_name>
+    <developer id="org.cvfosammmm">
+        <name translate="no">Cvfosammmm</name>
+    </developer>
 
     <description>
         <p>Setzer lets you Write LaTeX documents with an easy to use yet full-featured editor.</p>
